# FinalProject

./: boltzmann_openacc.ipynb
boltzmann-cuda/: CMakeLists.txt  README.md  boltzmann-cuda.cu
boltzmann-openacc/: CMakeLists.txt  README.md  b2q9_openACC.c  input.params
boltzmann-openmp/: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  b2q9_openMP.c  input.params
boltzmann-optimized/: CMakeLists.txt  optimized_code.c
boltzmann-serial/: CMakeLists.txt  d2q9-bgk.c
mpi/: a.out  gmon.out  input.params  mpi.c  report.html
mpi/report/: report.vtune
mpi/report/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
mpi/report/data.0/: 136384-136389.0-136389.0.th  136384-136389.0-136389.0.th.aux  136384-136389.0.trace  3743-3753.0-3753.0.th  3743-3753.0-3753.0.th.aux  3743-3753.0.trace  3753.stat.perf  map.events  perfcmd  sep.events  systemcollector-136384-hpcsap-DIT400TR-55L.sc  systemcollector-3743-DESKTOP-I3A7UQ5.sc
mpi/report/sqlite-db/: grouper.metadata
mpi/report/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
mpi/report/sqlite-db/_cache_grouper_data4_global_time_interval_metrics/: container.metadata
mpi/report/sqlite-db/_cache_grouper_data4_sched_and_counter_metrics/: container.metadata
mpi/report/sqlite-db/timelinedb/: directory.xml
profile-openacc/: boltzmann-openacc.c
profiling/advisor_report_optimized/: advisor_report.advixeproj  annotations.advidb2  project_read_only.infoadvixe
profiling/advisor_report_optimized/e000/: callstacks.def  e000.advixeexp  loop_hashes.def
profiling/advisor_report_optimized/e000/hs000/: hs000.advixe  metrics.advisum  threading.advisum  vectorization.advisum
profiling/advisor_report_optimized/e000/pp000/: advixe-runpp.txt  issues.xml  pp000.advixe
profiling/advisor_report_optimized/e000/report/: advisor-report.html
profiling/advisor_report_optimized/e000/trc000/: trc000.advixe
profiling/vtune-cuda/: boltzmann-cuda.vtuneproj
profiling/vtune-cuda/r000hs/: r000hs.vtune
profiling/vtune-cuda/r000hs/config/: context_values.cfg  log.cfg  runss.options
profiling/vtune-cuda/r000hs/data.0/: 7348-15576.0-23368.0.th  (+10 more)
profiling/vtune-cuda/r001tr/: r001tr.vtune
profiling/vtune-cuda/r002gh/: r002gh.vtune
profiling/vtune-cuda/r003hs/: r003hs.vtune
profiling/vtune-cuda/r004hpc/: r004hpc.vtune
profiling/vtune-cuda/r005gh/: r005gh.vtune
profiling/vtune_OpenMP/: vtune_OpenMP.vtune
profiling/vtune_OpenMP/config/: collection.cfg  context_values.cfg  log.cfg  runss.options  state.cfg
profiling/vtune_OpenMP/data.0/: 198874-198880.0-198880.0.th  198874-198880.0-198880.0.th.aux  198874-198880.0-198932.0.th  198874-198880.0-198932.0.th.aux  198874-198880.0-198933.0.th  198874-198880.0-198933.0.th.aux  198874-198880.0-198934.0.th  198874-198880.0-198934.0.th.aux  198874-198880.0-198935.0.th  198874-198880.0-198935.0.th.aux  198874-198880.0-198936.0.th  198874-198880.0-198936.0.th.aux  198874-198880.0-198937.0.th  198874-198880.0-198937.0.th.aux  198874-198880.0-198938.0.th  198874-198880.0-198938.0.th.aux  198874-198880.0-198939.0.th  198874-198880.0-198939.0.th.aux  198874-198880.0-198940.0.th  198874-198880.0-198940.0.th.aux  198874-198880.0-198941.0.th  198874-198880.0-198941.0.th.aux  198874-198880.0-198942.0.th  198874-198880.0-198942.0.th.aux  198874-198880.0-198943.0.th  198874-198880.0-198943.0.th.aux  198874-198880.0-198944.0.th  198874-198880.0-198944.0.th.aux  198874-198880.0-198945.0.th  198874-198880.0-198945.0.th.aux  198874-198880.0-198946.0.th  198874-198880.0-198946.0.th.aux  198874-198880.0-198947.0.th  198874-198880.0-198947.0.th.aux  198874-198880.0-198948.0.th  198874-198880.0-198948.0.th.aux  198874-198880.0-198949.0.th  198874-198880.0-198949.0.th.aux  198874-198880.0-198950.0.th  198874-198880.0-198950.0.th.aux  (+26 more)
profiling/vtune_optimized/: vtune_optimized.vtune
profiling/vtune_optimized/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
profiling/vtune_optimized/data.0/: 3617553-3617588.0-3617588.0.th  3617553-3617588.0-3617588.0.th.aux  3617553-3617588.0.trace  systemcollector-3617553-hpcsap-DIT400TR-55L.sc
profiling/vtune_optimized/sqlite-db/: dicer.db
profiling/vtune_original/: vtune_original.vtune
profiling/vtune_original/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
profiling/vtune_original/data.0/: 2248141-2248166.0-2248166.0.th  2248141-2248166.0-2248166.0.th.aux  2248141-2248166.0.trace  systemcollector-2248141-hpcsap-DIT400TR-55L.sc
(+265 files in other folders)
