cmake_minimum_required(VERSION 3.14.5)
project(boltzmann-optimized)
add_executable(boltzmann-optimized optimized_code.c input.params obstacles.dat)
target_link_libraries(boltzmann-optimized)
configure_file(input.params ${CMAKE_CURRENT_BINARY_DIR}/input.params COPYONLY)
configure_file(obstacles.dat ${CMAKE_CURRENT_BINARY_DIR}/obstacles.dat COPYONLY)
